<resources>
    <string name="app_name">Svea Capital</string>

    <string name="no_internet">No internet</string>
    <string name="server_error">Server error</string>
    <string name="parser_error">Server Response error</string>
    <string name="wrong">Some thing went wrong</string>
    <string name="turn_on_internet">Please turn on internet before proceeding.</string>
    <string name="ok">OK</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>



    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">,</string>
    <string name="btn_backspace">⬅</string>


    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_enter_your_registered_email">Please enter your registered email</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="trade_view">Trade View</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="add">Add</string>
    <string name="my_cards">My Cards</string>
    <string name="sign_out">Sign out</string>
    <string name="total_balance">Total Balance</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="enter_your_desired_amount">Enter your desired amount</string>

    <string name="please_fill">Please fill</string>
    <string name="close">Close</string>

</resources>
