<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.svea.app.base.BaseCallback" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/image_auth_back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:src="@drawable/ic_arrow_white"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{(v)->callback.onClick(v)}"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_5sdp"
            android:tint="@color/black"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginStart="@dimen/_10sdp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp80"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_app_icon"
            android:layout_marginTop="@dimen/dp40"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/linear_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_logo"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/linear_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp"
                android:visibility="visible">

                <EditText
                    android:id="@+id/edit_text_first_name"
                    style="@style/CustomEditText"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:text=""
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/edit_text_last_name"
                    style="@style/CustomEditText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:text=""
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/edit_phone_number"
                    style="@style/CustomEditText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:lines="1"
                    android:text=""
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorEditTextHint" />

                <EditText
                    android:id="@+id/edit_text_email_s_up"
                    style="@style/CustomEditText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/email"
                    android:text=""
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorEditTextHint" />

                <EditText
                    android:id="@+id/edit_text_password_s_up"
                    style="@style/CustomEditText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:text=""
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorEditTextHint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_register"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        style="@style/CustomButtonWhite"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:backgroundTint="#446084"
                        android:textAllCaps="true" />

                    <Button
                        android:id="@+id/button_login_s_up"
                        style="@style/CustomButton"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:visibility="gone"
                        android:backgroundTint="#7a9c59"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:text="@string/login"
                        android:textAllCaps="true" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>
