<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.svea.app.base.BaseCallback" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/image_auth_back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp80"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_app_icon"
            android:layout_marginTop="@dimen/dp40"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/linear_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_logo"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/linear_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp">

                <EditText
                    android:id="@+id/edit_text_email"
                    style="@style/CustomEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorEditTextHint" />

                <EditText
                    android:id="@+id/edit_text_password"
                    style="@style/CustomEditText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorEditTextHint" />

                <TextView
                    android:id="@+id/text_forgot_pass"
                    style="@style/CustomTextViewRegular"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:onClick="@{(v)->callback.onClick(v)}"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_login"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        style="@style/CustomButtonWhite"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:backgroundTint="#446084"
                        android:textAllCaps="true" />

                    <Button
                        android:id="@+id/button_register"
                        style="@style/CustomButton"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:backgroundTint="#7a9c59"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:text="@string/register"
                        android:textAllCaps="true" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>
