<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.svea.app.base.BaseCallback" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/image_auth_back">

        <ImageView
            android:id="@+id/image_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_10sdp"
            android:onClick="@{(v)->callback.onClick(v)}"
            android:padding="@dimen/_5sdp"
            android:tint="@color/colorButtonBlueTransparent"
            android:src="@drawable/ic_arrow_white"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/image_app_logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@id/image_back"
            android:src="@drawable/image_app_icon"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/image_app_logo"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                style="@style/CustomTextViewRegular"
                android:text="@string/please_enter_your_registered_email" />

            <EditText
                android:id="@+id/edit_text_email"
                style="@style/CustomEditText"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:layout_marginTop="@dimen/_20sdp"
                tools:ignore="Autofill" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/colorBlack" />

            <Button
                android:id="@+id/button_submit"
                style="@style/CustomButtonWhite"
                android:backgroundTint="#446084"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_30sdp"
                android:textAllCaps="true"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:text="@string/submit" />

        </LinearLayout>

    </RelativeLayout>

</layout>